# cfb_model

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  API_Functions.ipynb  CFB_Functions.ipynb  CHANGELOG.md  CLAUDE.md  CLEANUP_LOG.md  GEMINI.md  HYPERPARAMETER_OPTIMIZATION_HANDOFF.md  Makefile  README.md  REFACTORING_PLAN.md  REFACTORING_STATUS.md  WARP.md  columns.txt  debug_bets.py  debug_week6.py  gemini.md  mkdocs.yml  prefect.yaml  pyproject.toml  resume_processed.py  score_fresh.py  score_with_validation.py  summarize_totals_2024.py  validate_scoring.py  verify_weekly_files.py  walkthrough.md
.agent/: CONTEXT.md
.agent/skills/: CATALOG.md
.agent/workflows/: health-check.sh
.codex/: HYDRA.md  MAP.md  QUICKSTART.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
.reorganization_preserve/: artifacts_structure_before_purge.txt
.reorganization_preserve/week15_predictions/: CFB_week15_bets.csv
archive/: MANIFEST.md
artifacts/: spread_bucket_summary.json  totals_threshold_summary.json
artifacts/analysis/: README.md
artifacts/experiments/: README.md
artifacts/models/: README.md
artifacts/production/: README.md
artifacts/reports/: week_16_email.html
conf/: config.yaml  optimize_random_forest.yaml  optimize_ridge.yaml  validation.yaml
conf/experiment/: 02_opponent_adjustment.yaml  04_catboost_ranking.yaml  05_xgboost_ranking.yaml  05_xgboost_tuned.yaml  06_ensemble_ranking.yaml  07_recency_ranking.yaml  08_stacking_ranking.yaml  debug_dry_run.yaml  points_for_production_training.yaml  points_for_pruned.yaml  spread_catboost_baseline_v1.yaml  spread_catboost_recency_v1.yaml  totals_catboost_baseline_v1.yaml  totals_pace_interaction_v1.yaml  totals_xgboost_ppr_v1.yaml  v2_phase2_interaction_v1.yaml  v2_phase2_recency_baseline.yaml  v2_phase3_catboost_matchup_v1.yaml  v2_phase3_xgboost_matchup_v1.yaml  xgboost_full_validation_v1.yaml
conf/features/: interaction_v1.yaml  matchup_v1.yaml  matchup_v2.yaml  matchup_v2_pruned.yaml  minimal_unadjusted_v1.yaml  mismatch_v1.yaml  opponent_adjusted_v1.yaml  ppr_v1.yaml  recency_v1.yaml  recency_weighted_v1.yaml  standard_v1.yaml  (+2 more)
dashboard/: Dockerfile  app.py  docker-compose.yml  monitoring.py
docs/: api_reference.md  guide.md  implementation_schedule.md  index.md  initial_prompt.md  legacy_audit.md  phase2_setup_guide.md  project_charter.md  repo_cleanup_plan.md  roadmap.md
notebooks/: 03_aggregation_validation.ipynb  CFB_Functions.ipynb
reports/: model_experiment_results.csv
scripts/: add_game_id_to_report.py  adjustment_iteration_experiment.py  adjustment_iteration_experiment_v2.py  aggregations_cli.py  analysis_cli.py  analyze_calibration.py  analyze_feature_importance.py  analyze_performance_segments.py  analyze_points_for_calibration.py  analyze_spread_residuals.py  analyze_thresholds.py  analyze_week5.py  apply_hyperparameter_results.py  backfill_2025.py  backfill_2025_predictions.sh  backfill_ratings_workflow.py  backfill_stacked_predictions.py  build_points_for_slice.py  cache_running_season_stats.py  cache_weekly_stats.py  calculate_2025_betting_metrics.py  calibrate_and_thresholds.py  check_data_columns.py  check_links.py  check_optimization_status.sh  cleanup_team_partitions.py  cli.py  combine_points_for_and_legacy.py  compare_pruned_models.py  compare_totals_models.py  compute_hit_rates.py  confidence_threshold_sweep.py  create_walk_forward_report.py  debug_aggregation.py  debug_features.py  debug_hit_rates.py  debug_mlflow_artifact_logging.py  edge_threshold_sweep.py  eval_ratings.py  evaluate_points_for_prototype.py  (+71 more)
session_logs/: 2025-08-02.md  2025-08-03_01.md  2025-08-03_02.md  2025-08-03_04.md  2025-08-03_05.md  2025-08-10.md  2025-08-10_02.md  2025-08-11.md  2025-08-12.md  2025-08-12_02.md  2025-10-08_01.md  2026-02-10-01_context.md  2026-02-10_sprint-2026-02-10-01.md  README.md  TEMPLATE.md  session_log_2025-08-02.md  session_summary.md
src/: __init__.py  config.py  loader.py  scoring.py  train.py
templates/: email_last_week_review.html  email_weekly_picks.html  email_weekly_picks_v1.html  email_weekly_picks_v2.html  email_weekly_picks_v3.html
tests/: test_aggregate_drives_minimal.py  test_aggregate_team_game_minimal.py  test_aggregations_core.py  test_analysis_scoring.py  test_betting_policy_kelly.py  test_cli_registry.py  test_docstrings_smoke.py  test_imports.py  test_points_for_pipeline.py  test_storage.py  test_storage_entity_api.py  test_unadjusted_analysis.py  test_validation.py
(+1650 files in other folders)
