[project]
name = "cfb_model"
version = "0.1.0"
description = "An end-to-end college football betting model that predicts point spreads and over/unders."
requires-python = "~=3.12"
authors = [{ name = "Connor Kitchings", email = "connor.kitchings@gmail.com" }]
dependencies = [
    "pandas>=2.0",
    "scikit-learn>=1.4",
    "streamlit>=1.30",
    "requests>=2.30",
    "python-dotenv>=1.0",
    "prefect>=2.19.0",
    "shap>=0.45.0",
    "cfbd>=5.9.1",  # CollegeFootballData API access
    "pyarrow>=15.0"  # Parquet IO
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5.0",
    "bandit>=1.7.9",
    "mlflow>=2.0",
    "jupyter>=1.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.25.0",
    "safety>=2.3.5",
    "openlineage-python>=1.15.0",
    "nbstripout>=0.7.1",
    "nbformat>=5.10.4"
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]



[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
